<resources>
    <string name="app_name">Tindog</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="user_name">User Name</string>
    <string name="dog_name">Dog Name</string>
    <string name="age">Age</string>


    <string name="dog_phone">Phone</string>
    <string name="text">Text</string>
    <string name="picture">Picture</string>
    <integer name="max_length">300</integer>


    <string name="save">Save</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_user">Sign in</string>
    <string name="user_name">User Name</string>
    <string name="dog_name">Dog Name</string>
    <string name="age">Age</string>


    <string name="dog_phone">Phone</string>
    <string name="text">Text</string>
    <string name="picture">Picture</string>
    <integer name="max_length">300</integer>


    <string name="save">Save</string>


    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tindog</string>
    <string name="nav_header_subtitle">endless poawssibilities</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="tindog_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tindog">Tindog</string>
    <string name="menu_park">Park</string>
    <string name="menu_fff">Find Fluffy Fried</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dog_form">DogFormActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="checkin">checkin</string>
    <string name="show_park_checkin">show park checkin</string>
    <string name="min_age">minimum age</string>
    <string name="min_age_spinner">please select</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="both">both</string>
    <string name="castrated">Castrated</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="done">apply</string>
    <string name="max_age">maximum age</string>
</resources>