<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/nose_dog"

    android:layout_height="match_parent">

    <TextView
        android:id="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tindog_settings"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        />

    <TextView
        android:id="@+id/min_age"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="28dp"
        android:text="@string/min_age"
        android:textSize="20sp"


        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginStart="68dp" />


    <NumberPicker
        android:id="@+id/min_age_picker"
        android:layout_width="89dp"
        android:layout_height="63dp"
        app:layout_constraintLeft_toRightOf="@id/min_age"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />
    <NumberPicker
        android:id="@+id/max_age_picker"
        android:layout_width="89dp"
        android:layout_height="63dp"
        app:layout_constraintLeft_toRightOf="@id/min_age"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_age"
        />
    <TextView
        android:id="@+id/max_age"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="28dp"
        android:text="@string/max_age"
        android:textSize="20sp"


        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_age"
        android:layout_marginStart="68dp" />




    <TextView
        android:id="@+id/gender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/gender"
        android:textSize="20sp"
        android:textStyle="bold|italic"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_age"

        app:layout_constraintVertical_bias="0.174" />

    <RadioGroup
        android:id="@+id/choose_gender"

        android:layout_width="266dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="28dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/max_age_picker">


        <RadioButton
            android:id="@+id/male_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="28dp"
            android:text="@string/male"
            app:layout_constraintLeft_toRightOf="@id/gender_text"
            app:layout_constraintTop_toBottomOf="@id/max_age_picker" />

        <RadioButton
            android:id="@+id/female_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="64dp"
            android:text="@string/female"
            app:layout_constraintRight_toRightOf="@id/male_button"
            app:layout_constraintTop_toBottomOf="@id/min_age_picker" />

        <RadioButton
            android:id="@+id/both_button"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:text="@string/both"
            app:layout_constraintRight_toRightOf="@id/female_button"
            app:layout_constraintTop_toBottomOf="@id/min_age_picker" />
    </RadioGroup>


    <TextView
        android:id="@+id/castrated_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/castrated"
        android:textSize="20sp"
        android:textStyle="bold|italic"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_text"

        app:layout_constraintVertical_bias="0.018" />


    <RadioGroup
        android:id="@+id/choose_castrated"

        android:layout_width="259dp"
        android:layout_height="77dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_gender">


        <RadioButton
            android:id="@+id/castrated_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="28dp"
            android:text="@string/yes"
            app:layout_constraintLeft_toRightOf="@id/gender_text"
            app:layout_constraintTop_toBottomOf="@id/max_age_picker" />

        <RadioButton
            android:id="@+id/uncastrated_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="64dp"
            android:text="@string/no"
            app:layout_constraintRight_toRightOf="@id/male_button"
            app:layout_constraintTop_toBottomOf="@id/min_age_picker" />

        <RadioButton
            android:id="@+id/both_cas_button"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:text="@string/both"
            app:layout_constraintRight_toRightOf="@id/female_button"
            app:layout_constraintTop_toBottomOf="@id/min_age_picker" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="176dp"
        android:text="@string/done"
        android:backgroundTint="#3E7476"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>